# DynLaneSeq

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: EXPERIMENT_HISTORY_AND_DIAGNOSIS.md  INSTALL_AND_TRAIN.md  dynlaneseq_phase_explainer.html  prd.md
dynlaneseq_eg/: __init__.py  config.py  factory.py
scripts/: analyze_culane_s0_structured_query_proposal_recall.sh  analyze_culane_s3_structured_query_proposal_recall.sh  analyze_debug_s0_dynamic_proposal_2k.sh  analyze_debug_s0_dynamic_proposal_continue_12k.sh  analyze_debug_s0_structured_query_2k.sh  analyze_debug_s0_structured_query_continue_12k.sh  analyze_debug_s1_residual_structured_query_2k_init_structured.sh  analyze_debug_s2_residual_structured_query_2k_from_s1.sh  analyze_debug_s3_active_corridor_qualitycal_structured_query_2k_from_s2.sh  analyze_debug_structured_query_sota96_2k.sh  analyze_proposal_recall_2k.sh  benchmark_training_bottleneck.py  eval_culane_s0_structured_query_val_sweep.sh  eval_culane_s3_qualitycal_noexist_lineiou_shadow_test.sh  eval_culane_s3_qualitycal_test.sh  eval_culane_s3_qualitycal_val_sweep.sh  eval_culane_s3_structured_query_test.sh  eval_culane_s3_structured_query_val_sweep.sh  eval_debug_s0_dynamic_proposal_2k.sh  eval_debug_s0_dynamic_proposal_continue_12k.sh  eval_debug_s0_dynevidence_2k.sh  eval_debug_s0_dynevidence_ckpts_2k.sh  eval_debug_s0_dynevidence_continue_12k.sh  eval_debug_s0_geometry_evidence_2k.sh  eval_debug_s0_geometry_evidence_continue_12k.sh  eval_debug_s0_geometry_evidence_fromscratch_continue_12k.sh  eval_debug_s0_structured_query_2k.sh  (+65 more)
(+181 files in other folders)
