[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynlaneseq-eg"
version = "0.1.0"
description = "DynLaneSeq-EG: Evidence-grounded dynamic lane sequence model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "torch>=2.2",
  "torchvision>=0.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dynlaneseq_eg*"]

